added Input Validation, Logging, Dependency Injection, Repository, DTO, Print library and more

--- a/PrintMaster/PrintMaster.csproj
+++ b/PrintMaster/PrintMaster.csproj
@@ -7,7 +7,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Spire.Doc" Version="11.11.8" />
+    <PackageReference Include="Spire.PDF" Version="9.11.4" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+    <PackageReference Include="System.Drawing.Common" Version="8.0.0" />
   </ItemGroup>
 
 </Project>
